# notsofatso

./: .gitignore  .gitmodules  AboutDlg.cpp  AboutDlg.h  CMakeLists.txt  ChannelsDlg.cpp  ChannelsDlg.h  ConfigDlg.cpp  ConfigDlg.h  DFC.h  DFC_Array.cpp  DFC_Array.h  DFC_Dialog.cpp  DFC_String.cpp  DFC_String.h  DFC_Wnd.cpp  FME07Dlg.cpp  FME07Dlg.h  FileInfoDlg.cpp  FileInfoDlg.h  GeneralFileInfoDlg.cpp  GeneralFileInfoDlg.h  MMC5Dlg.cpp  MMC5Dlg.h  MainControlDlg.cpp  MainControlDlg.h  MiniPlayControlDlg.cpp  MiniPlayControlDlg.h  N106Dlg.cpp  N106Dlg.h  NSF.cpp  NSF.h  NSF_6502.cpp  NSF_Core.cpp  NSF_Core.h  NSF_File.cpp  NSF_File.h  NotsoFatso.def  PlayControlDlg.cpp  PlayControlDlg.h  (+30 more)
resource/: Resource.rc
src/: NSF.cpp  NSF.h  Winamp.h  config.h  vlc.cpp
src/core/: NSF_6502.cpp  NSF_Core.cpp  NSF_Core.h  NSF_File.cpp  NSF_File.h  Wave_FDS.h  Wave_FME07.h  Wave_MMC5.h  Wave_N106.h  Wave_Square.h  Wave_TND.h  Wave_VRC6.h  Wave_VRC7.cpp  config.h  file.h  fmopl.c  fmopl.h  libc_file.h  stream.h  stream.hpp
src/dfc/: DFC.h  DFC_Array.cpp  DFC_Array.h  DFC_Dialog.cpp  DFC_String.cpp  DFC_String.h  DFC_Wnd.cpp
src/gui/: AboutDlg.cpp  AboutDlg.h  ChannelsDlg.cpp  ChannelsDlg.h  ConfigDlg.cpp  ConfigDlg.h  FME07Dlg.cpp  FME07Dlg.h  FileInfoDlg.cpp  FileInfoDlg.h  GeneralFileInfoDlg.cpp  GeneralFileInfoDlg.h  MMC5Dlg.cpp  MMC5Dlg.h  MainControlDlg.cpp  MainControlDlg.h  MiniPlayControlDlg.cpp  MiniPlayControlDlg.h  N106Dlg.cpp  N106Dlg.h  PlayControlDlg.cpp  PlayControlDlg.h  PlaylistDlg.cpp  PlaylistDlg.h  TagInfoDlg.cpp  TagInfoDlg.h  TrackInfoDlg.cpp  TrackInfoDlg.h  VRC6Dlg.cpp  VRC6Dlg.h  VRC7Dlg.cpp  VRC7Dlg.h
src/vlc/: vlc.cpp  vlc_stream.cpp  vlc_stream.h
